--- a/vgg-tf.ipynb
+++ b/vgg-tf.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,12 +39,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = Sequential()\n",
-    "model.add(ZeroPadding2D((1, 1), input_shape=(224,224, 3))) #edit input shape\n",
+    "model.add(ZeroPadding2D((1, 1), input_shape=(224,224, 3)))\n",
     "model.add(Convolution2D(64, (3, 3), activation='relu'))\n",
     "model.add(ZeroPadding2D((1, 1)))\n",
     "model.add(Convolution2D(64, (3, 3), activation='relu'))\n",
@@ -85,6 +85,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Convert Model Weight"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Results"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -108,7 +129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
