--- a/vgg-tf.ipynb
+++ b/vgg-tf.ipynb
@@ -18,11 +18,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "import scipy.io as sio\n",
+    "import tensorflow as tf\n",
     "from tensorflow.keras.models import Sequential, Model\n",
     "from tensorflow.keras.layers import ZeroPadding2D, Convolution2D, MaxPooling2D, Dense, Dropout, Softmax, Flatten, Activation, BatchNormalization"
    ]
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +87,9 @@
     }
    ],
    "source": [
-    "mat = sio.loadmat('data/vgg_face.mat', struct_as_record=False)\n",
+    "def load_mat():\n",
+    "    mat = sio.loadmat('data/vgg_face.mat', struct_as_record=False)\n",
+    "    \n",
     "net = mat['net'][0][0]\n",
     "mat_model = net.layers\n",
     "mat_model_layers = mat_model[0]\n",
@@ -105,7 +108,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def vgg_tf():\n",
+    "    model = Sequential()\n",
+    "\n",
+    "    for i in range(num_mat_layers):\n",
+    "        mat_model_layer = mat_model_layers[i][0][0].name[0]\n",
+    "        if mat_model_layer.find(\"conv\") == 0 or mat_model_layer.find(\"fc\") == 0:\n",
+    "            weights = mat_model_layers[i][0,0].weights\n",
+    "            weights_shape = weights[0][0].shape\n",
+    "            filter_x = weights_shape[0]; filter_y = weights_shape[1]\n",
+    "            number_of_filters = weights_shape[3]\n",
+    "\n",
+    "            if mat_model_layer.find(\"conv\") == 0:\n",
+    "                print(\"ZeroPadding2D((1,1))\")\n",
+    "                if i == 0:\n",
+    "                    model.add(ZeroPadding2D((1,1),input_shape=(224,224, 3)))\n",
+    "                else:\n",
+    "                    model.add(ZeroPadding2D((1,1)))\n",
+    "\n",
+    "            print(\"Convolution2D(\",number_of_filters,\", (\",filter_x,\", \",filter_y,\"), name='\",mat_model_layer,\"')\")\n",
+    "            model.add(Convolution2D(number_of_filters, (filter_x, filter_y), name= mat_model_layer))\n",
+    "\n",
+    "        else:\n",
+    "            if mat_model_layer.find(\"relu\") == 0:\n",
+    "                print(\"Activation('relu', name=\",mat_model_layer)\n",
+    "                model.add(Activation('relu', name=mat_model_layer))\n",
+    "            elif mat_model_layer.find(\"dropout\") == 0:\n",
+    "                print(\"Dropout(0.5, name=\",mat_model_layer,\")\")\n",
+    "                model.add(Dropout(0.5, name=mat_model_layer))\n",
+    "            elif mat_model_layer.find(\"pool\") == 0:\n",
+    "                print(\"MaxPooling2D((2,2), strides=(2,2), name=\",mat_model_layer,\")\")\n",
+    "                model.add(MaxPooling2D((2,2), strides=(2,2), name=mat_model_layer))\n",
+    "            elif mat_model_layer.find(\"softmax\") == 0:\n",
+    "                print(\"Activation('softmax', name=\",mat_model_layer,\")\")\n",
+    "                model.add(Activation('softmax', name=mat_model_layer))\n",
+    "            else:\n",
+    "                print(\"-->\",mat_model_layer)\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save model to .h5 file for use later."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -168,56 +223,7 @@
     }
    ],
    "source": [
-    "model = Sequential()\n",
-    "\n",
-    "for i in range(num_mat_layers):\n",
-    "    mat_model_layer = mat_model_layers[i][0][0].name[0]\n",
-    "    if mat_model_layer.find(\"conv\") == 0 or mat_model_layer.find(\"fc\") == 0:\n",
-    "        weights = mat_model_layers[i][0,0].weights\n",
-    "        weights_shape = weights[0][0].shape\n",
-    "        filter_x = weights_shape[0]; filter_y = weights_shape[1]\n",
-    "        number_of_filters = weights_shape[3]\n",
-    "        \n",
-    "        if mat_model_layer.find(\"conv\") == 0:\n",
-    "            print(\"ZeroPadding2D((1,1))\")\n",
-    "            if i == 0:\n",
-    "                model.add(ZeroPadding2D((1,1),input_shape=(224,224, 3)))\n",
-    "            else:\n",
-    "                model.add(ZeroPadding2D((1,1)))\n",
-    "        \n",
-    "        print(\"Convolution2D(\",number_of_filters,\", (\",filter_x,\", \",filter_y,\"), name='\",mat_model_layer,\"')\")\n",
-    "        model.add(Convolution2D(number_of_filters, (filter_x, filter_y), name= mat_model_layer))\n",
-    "        \n",
-    "    else:\n",
-    "        if mat_model_layer.find(\"relu\") == 0:\n",
-    "            print(\"Activation('relu', name=\",mat_model_layer)\n",
-    "            model.add(Activation('relu', name=mat_model_layer))\n",
-    "        elif mat_model_layer.find(\"dropout\") == 0:\n",
-    "            print(\"Dropout(0.5, name=\",mat_model_layer,\")\")\n",
-    "            model.add(Dropout(0.5, name=mat_model_layer))\n",
-    "        elif mat_model_layer.find(\"pool\") == 0:\n",
-    "            print(\"MaxPooling2D((2,2), strides=(2,2), name=\",mat_model_layer,\")\")\n",
-    "            model.add(MaxPooling2D((2,2), strides=(2,2), name=mat_model_layer))\n",
-    "        elif mat_model_layer.find(\"softmax\") == 0:\n",
-    "            print(\"Activation('softmax', name=\",mat_model_layer,\")\")\n",
-    "            model.add(Activation('softmax', name=mat_model_layer))\n",
-    "        else:\n",
-    "            print(\"-->\",mat_model_layer)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Save model to .h5 file for use later."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "model = vgg_tf()\n",
     "model.save('data/vgg_face.h5')"
    ]
   },
@@ -230,10 +236,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def classier_model(input_dim):\n",
+    "    classifier = Sequential()\n",
+    "    classifier.add(Dense(100, input_dim=input_dim)) #input dim\n",
+    "    classifier.add(BatchNormalization())\n",
+    "    classifier.add(Activation('tanh'))\n",
+    "    classifier.add(Dropout(0.3))\n",
+    "    classifier.add(Dense(20))\n",
+    "    classifier.add(BatchNormalization())\n",
+    "    classifier.add(Activation('tanh'))\n",
+    "    classifier.add(Dropout(0.1))\n",
+    "    classifier.add(Dense(140))\n",
+    "    classifier.add(Activation('softmax'))\n",
+    "    classifier.compile(loss=tf.keras.losses.SparseCategoricalCrossentropy(), optimizer='adam', metrics=['accuracy'])\n",
+    "    return classifier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load Images"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train Classifier"
+   ]
   },
   {
    "cell_type": "markdown",
